2000-03-29  Nick Clifton  <nickc@cygnus.com>

	* config/arm/arm.c: Minor formatting changes/
	* config/arm/arm.h (SUBTARGET_EXTRA_ASM_SPEC): Define if not
	already defined.
	(ASM_SPEC): Define if not already defined.

2000-03-29  Zack Weinberg  <zack@wolery.cumb.org>

	* cppfiles.c (cpp_read_file): Don't pass zero-length string to
	_cpp_calc_hash.

2000-03-29  Jakub Jelinek  <jakub@redhat.com>

	* dwarf2out.c (gen_enumeration_type_die): If enum has a negative
	value, don't output it as unsigned.

Wed Mar 29 10:53:49 2000  Jeffrey A Law  (law@cygnus.com)

	* stmt.c (stmt_loop_nest_empty): Allow cfun->stmt to be NULL.

2000-03-29  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>

	* c-common.c (c_common_nodes_and_builtins): Don't special case
	cplus_mode when declaring builtin bzero/bcmp, always avoid
	prototype arguments.

2000-03-29  Bruce Korb  <bkorb@gnu.org>

	* fixinc/mkfixinc.sh: Initially set the variable "fixincludes"
	to a non-file

Wed Mar 29 15:08:01 MET DST 2000  Jan Hubicka  <jh@suse.cz>

	Convert ACCUMULATE_OUTGOING_ARGS to an expression.
	* calls.c (PUSH_ARGS_REVERSED) Change to expression.
	(ACCUMULATE_OUTGOING_ARGS, PUSH_ARGS): Provide default value.
	(struct arg_data): Remove #ifdef ACCUMULATE_OUTGOING_ARGS.
	(save_fixed_argument_area, restore_fixed_argument_area):
	conditionize by #ifdef REG_PARM_STACK_SPACE only.
	(emit_call): Change #ifdefs on ACCUMULATE_OUTGOING_ARGS
	to conditions, handle RETURN_POPS_ARGS on ACCUMULATE_OUTGOING_ARGS.
	(precompute_register_parameters): Avoid #ifdefs on
	ACCUMULATE_OUTGOING_ARGS and PUSH_ARGS_REVERSED.
	(stire_one_args): Likewise.
	(expand_call): Likewise; conditionize PUSH_ROUNDING code by PUSH_ARGS.
	(emit_library_call_value_1): Likewise.
	(compute_argument_block_size): Align to STACK_BOUNDARY only for
	ACCUMULATE_OUTGOING_ARGS.
	* combine.c (ACCUMULATE_OUTGOING_ARGS, PUSH_ARGS): Provide default
	value.
	(nonzero_bits): Conditionize PUSH_ROUNDING code by USE_PUSH.
	(use_crosses_set_p): Likewise.